--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
                                     <span class="dash_title">Hours</span>
                                 </div>
                             </div>
+                            <div class="col-md-3 col-sm-3 col-xs-6 dash-glob" data-scroll-reveal="enter bottom move 25px, after 0.3s">
+                                <div class="dash hours_dash">
+                                    <div class="digit">0</div>
+                                    <div class="digit">0</div>
+                                    <span class="dash_title">Hours</span>
+                                </div>
+                            </div>
                             <!-- MINUTES -->
                             <div class="col-md-3 col-sm-3 col-xs-6 dash-glob" data-scroll-reveal="enter bottom move 25px, after 0.3s">
                                 <div class="dash minutes_dash">
@@ -93,7 +100,7 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="main_content">
-                            <h4><strong>Indus is under construction!</strong></h4>
+                            
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
                             <div id="" class="confirm-message"></div>
                             <form id="" name="">
